--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "name": "Telegram Files Rename Bot",
     "description": "A Very Simple Telegram Files Rename Bot by @AbirHasan2005",
+    "stack": "container",
     "keywords": [
         "telegram",
         "files",
@@ -40,14 +41,10 @@
             "description": "Bot Owner UserID"
         }
     },
-    "buildpacks": [ 
-        {
-            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-        }, 
-        { 
-            "url": "heroku/python"
-        }
-    ],
+    "addons": [],
+    "buildpacks": [{
+        "url": "heroku/python"
+    }],
     "formation": {
         "worker": {
             "quantity": 1,
